--- a/lattice.ipynb
+++ b/lattice.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "id": "c5603dc2",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "id": "d0915637",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "id": "cfc40ed7",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97db09a126b14fd587aa6917112fc036",
+       "model_id": "8d8985d5076049ae8180fa7033d56468",
        "version_major": 2,
        "version_minor": 0
       },
@@ -88,18 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "id": "82ea0033",
    "metadata": {},
    "outputs": [],
    "source": [
-    "spaceAnalyzer = SpacegroupAnalyzer(prim_struc, 0.1)\n",
+    "spaceAnalyzer = SpacegroupAnalyzer(prim_struc)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "id": "bc731955",
    "metadata": {},
    "outputs": [],
@@ -107,14 +107,14 @@
     "#Obtenir la structure\n",
     "data = spaceAnalyzer.get_primitive_standard_structure()\n",
     "\n",
-    "#Paramètres de maille\n",
+    "#Paramètres de maille primitive\n",
     "a = data.lattice.a\n",
     "alpha = data.lattice.alpha"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "id": "0c5949e0",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "id": "a91006e6",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
     }
    ],
    "source": [
-    "#Réseau direct\n",
+    "#Réseau direct primitif\n",
     "#Convertir dans le système rhomboédrique \n",
     "direct_Network = spaceAnalyzer.find_primitive().lattice.rhombohedral(a, alpha)\n",
     "print(\"Vecteurs du réseau direct : \")\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
    "id": "5b977bc9",
    "metadata": {},
    "outputs": [
@@ -183,11 +183,19 @@
     }
    ],
    "source": [
-    "#Réseau réciproque\n",
+    "#Réseau réciproque primitif\n",
     "reciprocal_Network = spaceAnalyzer.find_primitive().lattice.rhombohedral(a,alpha).reciprocal_lattice\n",
     "print(\"Vecteurs du réseau réciproque : \")\n",
     "print(reciprocal_Network.matrix)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f34211b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -199,45 +207,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "41f04559",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----Réseau direct----          \n",
-      "Vecteur a                      [3.46866658 0.         4.11169889]\n",
-      "Vecteur b                      [1.50268632 3.12627281 4.11169889]\n",
-      "Vecteur c                      [0.         0.         5.37937874]\n",
-      "Longueurs (a, b, c)            (5.379378735817053, 5.379378735817053, 5.379378735817053)\n",
-      "Angles (α, β, γ)               (40.15128337588714, 40.15128337588714, 40.15128337588714)\n",
-      "\n",
-      "----Réseau réciproque----      \n",
-      "Vecteur a*                     [ 1.8114123  -0.87068041  0.        ]\n",
-      "Vecteur b*                     [0.         2.00980071 0.        ]\n",
-      "Vecteur c*                     [-1.38454314 -0.87068041  1.16801319]\n",
-      "Longueurs (a*, b*, c*)         (2.0098007108118305, 2.0098007108118305, 2.009800710811831)\n",
-      "Angles (α*, β*, γ*)            (115.67191115040721, 115.67191115040721, 115.6719111504072)\n",
-      "\n",
-      "----Informations cristallographiques---- \n",
-      "Type de maille                 rhombohedral\n",
-      "Système cristallin             trigonal\n",
-      "Groupe ponctuel                -3m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "données =  [\n",
-    "    (\"----Réseau direct----\", \"\"),\n",
+    "    (\"----Réseau direct maille primitive----\", \"\"),\n",
     "    (\"Vecteur a\", direct_Network.matrix[0]),\n",
     "    (\"Vecteur b\", direct_Network.matrix[1]),\n",
     "    (\"Vecteur c\", direct_Network.matrix[2]),\n",
     "    (\"Longueurs (a, b, c)\", direct_Network.abc),\n",
     "    (\"Angles (α, β, γ)\", direct_Network.angles),\n",
     "    (\"\", \"\"),\n",
-    "    (\"----Réseau réciproque----\", \"\"),\n",
+    "    (\"----Réseau réciproque maille primitive----\", \"\"),\n",
     "    (\"Vecteur a*\", reciprocal_Network.matrix[0]),\n",
     "    (\"Vecteur b*\", reciprocal_Network.matrix[1]),\n",
     "    (\"Vecteur c*\", reciprocal_Network.matrix[2]),\n",
