--- a/lattice.ipynb
+++ b/lattice.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "id": "c5603dc2",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "id": "d0915637",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 66,
    "id": "cfc40ed7",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d8985d5076049ae8180fa7033d56468",
+       "model_id": "ec039bf299194425b011aa4aae44af27",
        "version_major": 2,
        "version_minor": 0
       },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 67,
    "id": "82ea0033",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "id": "bc731955",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "id": "0c5949e0",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "id": "a91006e6",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 71,
    "id": "5b977bc9",
    "metadata": {},
    "outputs": [
@@ -207,10 +207,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "41f04559",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----Réseau direct maille primitive---- \n",
+      "Vecteur a                      [3.46866658 0.         4.11169889]\n",
+      "Vecteur b                      [1.50268632 3.12627281 4.11169889]\n",
+      "Vecteur c                      [0.         0.         5.37937874]\n",
+      "Longueurs (a, b, c)            (5.379378735817053, 5.379378735817053, 5.379378735817053)\n",
+      "Angles (α, β, γ)               (40.15128337588714, 40.15128337588714, 40.15128337588714)\n",
+      "\n",
+      "----Réseau réciproque maille primitive---- \n",
+      "Vecteur a*                     [ 1.8114123  -0.87068041  0.        ]\n",
+      "Vecteur b*                     [0.         2.00980071 0.        ]\n",
+      "Vecteur c*                     [-1.38454314 -0.87068041  1.16801319]\n",
+      "Longueurs (a*, b*, c*)         (2.0098007108118305, 2.0098007108118305, 2.009800710811831)\n",
+      "Angles (α*, β*, γ*)            (115.67191115040721, 115.67191115040721, 115.6719111504072)\n",
+      "\n",
+      "----Informations cristallographiques---- \n",
+      "Type de maille                 rhombohedral\n",
+      "Système cristallin             trigonal\n",
+      "Groupe ponctuel                -3m\n"
+     ]
+    }
+   ],
    "source": [
     "données =  [\n",
     "    (\"----Réseau direct maille primitive----\", \"\"),\n",
