--- a/lattice.ipynb
+++ b/lattice.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "id": "c5603dc2",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "d0915637",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "id": "cfc40ed7",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec039bf299194425b011aa4aae44af27",
+       "model_id": "558e3652dfcb47deaa12e4eae2b7a023",
        "version_major": 2,
        "version_minor": 0
       },
@@ -88,33 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "id": "82ea0033",
    "metadata": {},
    "outputs": [],
    "source": [
     "spaceAnalyzer = SpacegroupAnalyzer(prim_struc)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "bc731955",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#Obtenir la structure\n",
     "data = spaceAnalyzer.get_primitive_standard_structure()\n",
-    "\n",
-    "#Paramètres de maille primitive\n",
-    "a = data.lattice.a\n",
-    "alpha = data.lattice.alpha"
+    "data2 = spaceAnalyzer.get_conventional_standard_structure()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "id": "0c5949e0",
    "metadata": {},
    "outputs": [
@@ -142,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "id": "a91006e6",
    "metadata": {},
    "outputs": [
@@ -150,24 +137,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vecteurs du réseau direct : \n",
-      "[[3.46866658 0.         4.11169889]\n",
-      " [1.50268632 3.12627281 4.11169889]\n",
-      " [0.         0.         5.37937874]]\n"
+      "Vecteurs du réseau direct maille primitive :\n",
+      "[[ 5.05252913 -1.84652782  0.        ]\n",
+      " [ 5.05252913  1.84652782  0.        ]\n",
+      " [ 4.37768591  0.          3.12627281]]\n",
+      "Vecteurs du réseau direct maille conventionnelle :\n",
+      "[[ 1.84652782 -3.19828001  0.        ]\n",
+      " [ 1.84652782  3.19828001  0.        ]\n",
+      " [ 0.          0.         14.81632411]]\n"
      ]
     }
    ],
    "source": [
     "#Réseau direct primitif\n",
     "#Convertir dans le système rhomboédrique \n",
-    "direct_Network = spaceAnalyzer.find_primitive().lattice.rhombohedral(a, alpha)\n",
-    "print(\"Vecteurs du réseau direct : \")\n",
-    "print(direct_Network.matrix)\n"
+    "direct_Network = data.lattice\n",
+    "print(\"Vecteurs du réseau direct maille primitive :\")\n",
+    "print(direct_Network.matrix)\n",
+    "#Réseau direct conventionnel\n",
+    "direct_Network2 = data2.lattice\n",
+    "print(\"Vecteurs du réseau direct maille conventionnelle :\")\n",
+    "print(direct_Network2.matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "id": "5b977bc9",
    "metadata": {},
    "outputs": [
@@ -175,27 +170,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vecteurs du réseau réciproque : \n",
-      "[[ 1.8114123  -0.87068041  0.        ]\n",
-      " [ 0.          2.00980071  0.        ]\n",
-      " [-1.38454314 -0.87068041  1.16801319]]\n"
+      "Vecteurs du réseau réciproque maille primitive: \n",
+      "[[ 0.62178615 -1.70135137 -0.87068041]\n",
+      " [ 0.62178615  1.70135137 -0.87068041]\n",
+      " [ 0.          0.          2.00980071]]\n",
+      "Vecteurs du réseau réciproque maille conventionnelle: \n",
+      "[[ 1.70135137 -0.98227567  0.        ]\n",
+      " [ 1.70135137  0.98227567  0.        ]\n",
+      " [ 0.          0.          0.4240718 ]]\n"
      ]
     }
    ],
    "source": [
     "#Réseau réciproque primitif\n",
-    "reciprocal_Network = spaceAnalyzer.find_primitive().lattice.rhombohedral(a,alpha).reciprocal_lattice\n",
-    "print(\"Vecteurs du réseau réciproque : \")\n",
-    "print(reciprocal_Network.matrix)\n"
+    "reciprocal_Network = data.lattice.reciprocal_lattice\n",
+    "print(\"Vecteurs du réseau réciproque maille primitive: \")\n",
+    "print(reciprocal_Network.matrix)\n",
+    "#Réseau réciproque conventionnel\n",
+    "reciprocal_Network2 = data2.lattice.reciprocal_lattice\n",
+    "print(\"Vecteurs du réseau réciproque maille conventionnelle: \")\n",
+    "print(reciprocal_Network2.matrix)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f34211b7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -207,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "id": "41f04559",
    "metadata": {},
    "outputs": [
@@ -215,47 +210,80 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----Réseau direct maille primitive---- \n",
-      "Vecteur a                      [3.46866658 0.         4.11169889]\n",
-      "Vecteur b                      [1.50268632 3.12627281 4.11169889]\n",
-      "Vecteur c                      [0.         0.         5.37937874]\n",
-      "Longueurs (a, b, c)            (5.379378735817053, 5.379378735817053, 5.379378735817053)\n",
-      "Angles (α, β, γ)               (40.15128337588714, 40.15128337588714, 40.15128337588714)\n",
-      "\n",
-      "----Réseau réciproque maille primitive---- \n",
-      "Vecteur a*                     [ 1.8114123  -0.87068041  0.        ]\n",
-      "Vecteur b*                     [0.         2.00980071 0.        ]\n",
-      "Vecteur c*                     [-1.38454314 -0.87068041  1.16801319]\n",
-      "Longueurs (a*, b*, c*)         (2.0098007108118305, 2.0098007108118305, 2.009800710811831)\n",
-      "Angles (α*, β*, γ*)            (115.67191115040721, 115.67191115040721, 115.6719111504072)\n",
-      "\n",
       "----Informations cristallographiques---- \n",
       "Type de maille                 rhombohedral\n",
       "Système cristallin             trigonal\n",
-      "Groupe ponctuel                -3m\n"
+      "Groupe ponctuel                -3m\n",
+      "\n",
+      "-------Maille primitive------- \n",
+      "----Réseau direct----          \n",
+      "Vecteur a                      [ 5.05252913 -1.84652782  0.        ]\n",
+      "Vecteur b                      [5.05252913 1.84652782 0.        ]\n",
+      "Vecteur c                      [4.37768591 0.         3.12627281]\n",
+      "Longueurs (a, b, c)            (5.379378735817053, 5.379378735817053, 5.379378735817053)\n",
+      "Angles (α, β, γ)               (40.15128337588714, 40.15128337588714, 40.15128337588714)\n",
+      "\n",
+      "----Réseau réciproque----      \n",
+      "Vecteur a*                     [ 0.62178615 -1.70135137 -0.87068041]\n",
+      "Vecteur b*                     [ 0.62178615  1.70135137 -0.87068041]\n",
+      "Vecteur c*                     [0.         0.         2.00980071]\n",
+      "Longueurs (a*, b*, c*)         (2.009800710811831, 2.0098007108118314, 2.0098007108118314)\n",
+      "Angles (α*, β*, γ*)            (115.67191115040721, 115.67191115040721, 115.67191115040721)\n",
+      "\n",
+      "-------Maille conventionnelle------- \n",
+      "----Réseau direct----          \n",
+      "Vecteur a                      [ 1.84652782 -3.19828001  0.        ]\n",
+      "Vecteur b                      [1.84652782 3.19828001 0.        ]\n",
+      "Vecteur c                      [ 0.          0.         14.81632411]\n",
+      "Longueurs (a, b, c)            (3.693055649529556, 3.693055649529556, 14.8163241108812)\n",
+      "Angles (α, β, γ)               (90.0, 90.0, 120.00000000000001)\n",
+      "\n",
+      "----Réseau réciproque----      \n",
+      "Vecteur a*                     [ 1.70135137 -0.98227567  0.        ]\n",
+      "Vecteur b*                     [1.70135137 0.98227567 0.        ]\n",
+      "Vecteur c*                     [0.        0.        0.4240718]\n",
+      "Longueurs (a*, b*, c*)         (1.9645513486538124, 1.9645513486538124, 0.424071804865903)\n",
+      "Angles (α*, β*, γ*)            (90.0, 90.0, 60.00000000000001)\n"
      ]
     }
    ],
    "source": [
     "données =  [\n",
-    "    (\"----Réseau direct maille primitive----\", \"\"),\n",
+    "    (\"----Informations cristallographiques----\", \"\"),\n",
+    "    (\"Type de maille\", latticeType),\n",
+    "    (\"Système cristallin\", crystal_system),\n",
+    "    (\"Groupe ponctuel\", group),\n",
+    "    (\"\", \"\"),\n",
+    "    (\"-------Maille primitive-------\", \"\"),\n",
+    "    (\"----Réseau direct----\", \"\"),\n",
     "    (\"Vecteur a\", direct_Network.matrix[0]),\n",
     "    (\"Vecteur b\", direct_Network.matrix[1]),\n",
     "    (\"Vecteur c\", direct_Network.matrix[2]),\n",
     "    (\"Longueurs (a, b, c)\", direct_Network.abc),\n",
     "    (\"Angles (α, β, γ)\", direct_Network.angles),\n",
     "    (\"\", \"\"),\n",
-    "    (\"----Réseau réciproque maille primitive----\", \"\"),\n",
+    "    (\"----Réseau réciproque----\", \"\"),\n",
     "    (\"Vecteur a*\", reciprocal_Network.matrix[0]),\n",
     "    (\"Vecteur b*\", reciprocal_Network.matrix[1]),\n",
     "    (\"Vecteur c*\", reciprocal_Network.matrix[2]),\n",
     "    (\"Longueurs (a*, b*, c*)\", reciprocal_Network.abc),\n",
     "    (\"Angles (α*, β*, γ*)\", reciprocal_Network.angles),\n",
     "    (\"\", \"\"),\n",
-    "    (\"----Informations cristallographiques----\", \"\"),\n",
-    "    (\"Type de maille\", latticeType),\n",
-    "    (\"Système cristallin\", crystal_system),\n",
-    "    (\"Groupe ponctuel\", group),\n",
+    "    (\"-------Maille conventionnelle-------\",\"\"),\n",
+    "    (\"----Réseau direct----\", \"\"),\n",
+    "    (\"Vecteur a\", direct_Network2.matrix[0]),\n",
+    "    (\"Vecteur b\", direct_Network2.matrix[1]),\n",
+    "    (\"Vecteur c\", direct_Network2.matrix[2]),\n",
+    "    (\"Longueurs (a, b, c)\", direct_Network2.abc),\n",
+    "    (\"Angles (α, β, γ)\", direct_Network2.angles),\n",
+    "    (\"\", \"\"),\n",
+    "    (\"----Réseau réciproque----\", \"\"),\n",
+    "    (\"Vecteur a*\", reciprocal_Network2.matrix[0]),\n",
+    "    (\"Vecteur b*\", reciprocal_Network2.matrix[1]),\n",
+    "    (\"Vecteur c*\", reciprocal_Network2.matrix[2]),\n",
+    "    (\"Longueurs (a*, b*, c*)\", reciprocal_Network2.abc),\n",
+    "    (\"Angles (α*, β*, γ*)\", reciprocal_Network2.angles),\n",
+    "    \n",
     "]\n",
     "\n",
     "# Création du DataFrame\n",
