--- a/symmetry.ipynb
+++ b/symmetry.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d932c386",
+   "id": "4386af12",
    "metadata": {},
    "source": [
     "Grâce à JsMol, nous pouvons visualiser l'inversion autour du centre de symétrie, qui est l'atome de Ca à la position (0,0,0)"
@@ -345,7 +345,7 @@
    "id": "f3ceed78",
    "metadata": {},
    "source": [
-    "On arrive bien aux coordonnées (-y, x-y, z). Si on cherche dans les sites occupés par les atomes, on constate qu'on tombe bien sur un atome de C (atome numéro ....)"
+    "On arrive bien aux coordonnées (-y, x-y, z). Si on cherche dans les sites occupés par les atomes, on constate qu'on tombe bien sur un atome le même atome de C. "
    ]
   },
   {
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "127580c6",
+   "id": "9448caba",
    "metadata": {},
    "outputs": [],
    "source": []
